# UniqueRegionNamesGenerator

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: generate-cellmap.yml
ParseImage/: CMakeLists.txt  ImageWrapper.hpp  LogRedirect.hpp  PartitionStats.hpp  Region.hpp  RegionStats.hpp  RegionStatsMap.hpp  TMap.hpp  config.hpp  main.cpp  output_operators.hpp  types.hpp
ParseImage/config/: regions.ini
ParseImage/images/: cellmap.pdn
